--- a/.github/workflows/dockerimage_linux.yml
+++ b/.github/workflows/dockerimage_linux.yml
@@ -12,5 +12,5 @@ jobs:
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u lamanchy --password-stdin
 
 #        docker build . --file docker/wolf_base/linux.Dockerfile --tag lamanchy/wolf_base
-#        docker build . --file docker/wolf_app/linux.Dockerfile --tag lamanchy/wolf
-#        docker push lamanchy/wolf
+#        docker build . --file docker/wolf_app/linux.Dockerfile --tag lamanchy/wolf_linux
+#        docker push lamanchy/wolf_linux
