--- a/.github/workflows/dockerimage_linux.yml
+++ b/.github/workflows/dockerimage_linux.yml
@@ -10,7 +10,6 @@ jobs:
     - name: Build the Docker image
       run: |
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u lamanchy --password-stdin
-
-#        docker build . --file docker/wolf_base/linux.Dockerfile --tag lamanchy/wolf_base
-#        docker build . --file docker/wolf_app/linux.Dockerfile --tag lamanchy/wolf_linux
-#        docker push lamanchy/wolf_linux
+        docker build . --file docker/wolf_base/linux.Dockerfile --tag lamanchy/wolf_base
+        docker build . --file docker/wolf_app/linux.Dockerfile --tag lamanchy/wolf_linux
+        docker push lamanchy/wolf_linux
