--- a/.github/workflows/dockerimage_windows.yml
+++ b/.github/workflows/dockerimage_windows.yml
@@ -9,15 +9,16 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build the Docker image
       run: |
-        echo "1"
+        # free some space on builder
+        docker rmi mcr.microsoft.com/dotnet/framework/aspnet:4.8-windowsservercore-ltsc2019
+        docker rmi mcr.microsoft.com/dotnet/framework/runtime:4.8-windowsservercore-ltsc2019
+        docker rmi mcr.microsoft.com/windows/nanoserver:1809
+        docker rmi microsoft/aspnetcore-build:1.0-2.0
+        # log into docker
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u lamanchy --password-stdin | echo
-        echo "1"
-        docker image list
-        docker system prune -af
-        docker image list
-        Get-PSDrive C | Select-Object Used,Free
+        # build base
         docker build . --file docker\wolf_base\windows.Dockerfile --tag lamanchy/wolf_base --force-rm
-        Get-PSDrive C | Select-Object Used,Free
+        # build app
         docker build . --file docker\wolf_app\windows.Dockerfile --tag lamanchy/wolf_win --force-rm
-        Get-PSDrive C | Select-Object Used,Free
+        # push to docker
         docker push lamanchy/wolf_win
